🎨 style: fix selection contrast

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -37,7 +37,7 @@ body {
 
   ::selection {
     background-color: thorns.$accent-purple;
-    color: thorns.$fg0;
+    color: thorns.$bg0;
   }
 }
 
